// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract base case 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/baseTest/test1.js:4
#, javascript-format
msgid \\"test translation \${ name }\\"
msgstr \\"\\"

#: tests/fixtures/baseTest/nested/test2.js:4
msgid \\"test translation 2 \${ name }\\"
msgstr \\"\\""
`;

exports[`extract from js with another default locale 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/ukLocaleTest/index.js:5
#, javascript-format
msgid \\"\${ n } банан\\"
msgid_plural \\"\${ n } банана\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"
msgstr[2] \\"\\""
`;

exports[`extract from jsx 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/testJSXParse.jsx:6
msgid \\"test from jsx\\"
msgstr \\"\\""
`;

exports[`extract from svelte 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/testSvelteParse.svelte:3
msgid \\"String from module\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:9
msgid \\"world\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:12
#, javascript-format
msgid \\"Hello \${ translated } !\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:13
msgid \\"Instruction\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:14
#, javascript-format
msgid \\"Click <a href=\${ moreUrl }>here</a> for more info\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:16
msgid \\"Title in obj\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:18
msgid \\"True\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:18
msgid \\"False\\"
msgstr \\"\\"

#: tests/fixtures/testSvelteParse.svelte:19
msgid \\"Log out\\"
msgstr \\"\\""
`;

exports[`extract from ts 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tSParse.ts:4
#, javascript-format
msgid \\"\${ a } string\\"
msgstr \\"\\""
`;

exports[`extract from ts 2`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tsOptionalChaning.ts:5
#, javascript-format
msgid \\"test \${ name }\\"
msgstr \\"\\""
`;

exports[`extract from ts 3`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tsNullishCoalescing.ts:5
#, javascript-format
msgid \\"test \${ name }\\"
msgstr \\"\\""
`;

exports[`extract from ts with const enum 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tsConstEnum.ts:8
#, javascript-format
msgid \\"\${ a } string \${ eTestEnum.Test }\\"
msgstr \\"\\""
`;

exports[`extract from tsx 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tSXParse.tsx:4
msgid \\"test from tsx\\"
msgstr \\"\\""
`;

exports[`extract from vue 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/vueTest/testVueParse.vue:10
msgid \\"test from vue file\\"
msgstr \\"\\""
`;

exports[`extract from vue with tag inside the script 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/vueTest/testVueWithTagInScript.vue:6
msgid \\"test from vue file <a>Hello</a>\\"
msgstr \\"\\""
`;

exports[`should extract in the alphabetical order (sortByMsgid) 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/sortByMsgidTest/test.js:10
msgid \\"a translation \${ name }\\"
msgstr \\"\\"

#: tests/fixtures/sortByMsgidTest/test.js:4
#, javascript-format
msgid \\"c translation \${ name }\\"
msgstr \\"\\"

#: tests/fixtures/sortByMsgidTest/test.js:6
msgid \\"f translation \${ name }\\"
msgstr \\"\\"

#: tests/fixtures/sortByMsgidTest/test.js:8
#, javascript-format
msgid \\"z translation \${ name }\\"
msgstr \\"\\""
`;
